# RSD-Redfish

./: README.md
PSME/: CMakeLists.txt  PSME_REDFISH_SERVICE_API  README.md
PSME/PSME_REDFISH_API/: README.md
PSME/RF_Auto_Test/: CI.md  README.md  all.sh
PSME/RF_Auto_Test/redfish/1_account_service/: test_user_account.robot
PSME/RF_Auto_Test/redfish/3_event_service/: test_event_service.robot
PSME/RF_Auto_Test/redfish/4_managers/: test_managers_psme.robot
PSME/RF_Auto_Test/redfish/5_chassis/: test_chassis_psme.robot
PSME/RF_Auto_Test/redfish/5_dmtf_tools/: Redfish_Service_Validator.robot
PSME/RF_Auto_Test/redfish/6_dmtf_tools/: dmtf_tools.sh
PSME/RF_Auto_Test/redfish_eit/: test_eit_psme.robot
PSME/agent/: CMakeLists.txt
PSME/agent/chassis/: CMakeLists.txt
PSME/agent/chassis/include/loader/: chassis_loader.hpp
PSME/agent/chassis/src/: CMakeLists.txt  main.cpp
PSME/agent/chassis/src/command/: CMakeLists.txt  get_chassis_info.cpp  get_collection.cpp  get_ethernet_switch_info.cpp  get_ethernet_switch_port_info.cpp  get_port_vlan_info.cpp  get_pzone_info.cpp
PSME/agent/chassis/src/ipmb/: service.cpp
PSME/agent/chassis/src/loader/: chassis_loader.cpp
PSME/agent/chassis/src/onlp/: CMakeLists.txt
PSME/agent/chassis/tests/: CMakeLists.txt
PSME/agent/chassis/tests/acc_api_bal30_dist_test/: CMakeLists.txt  acc_api_bal30_dist_test.cpp  omci_exam.hpp
PSME/agent/chassis/tests/acc_api_bal3_dist_test/: CMakeLists.txt  acc_api_bal3_dist_test.cpp
PSME/agent/chassis/tests/acc_api_bal_dist_test/: CMakeLists.txt  acc_api_bal_dist_test.cpp  omci_exam.hpp
PSME/agent/chassis/tests/onlp_test/: CMakeLists.txt  onlp_test.cpp
PSME/agent/chassis/tests/session_test/: CMakeLists.txt  session_test.cpp
PSME/agent/chassis/tests/tree_stability/: CMakeLists.txt
PSME/agent/network/acc_sw/: C_PINFO  HW_NODE_AS4610_30T  HW_NODE_AS4610_54T  HW_NODE_AS5712_54X  HW_NODE_AS5812_54T  HW_NODE_AS5812_54X  HW_NODE_AS5912_54X  HW_NODE_AS5916_54XK  HW_NODE_AS5916_54XKS  HW_NODE_AS5916_54XM  HW_NODE_AS6712_32X  HW_NODE_AS6812_32X  HW_NODE_AS7312_54X  HW_NODE_AS7316_26XB  HW_NODE_AS7326_56X  HW_NODE_AS7712_32X  HW_NODE_AS7726_32X  HW_NODE_AS7816_64X  HW_NODE_AS7926_40XKE  HW_NODE_AS7926_80XK  HW_NODE_AS9716_32D  HW_NODE_ASGVOLT64  HW_NODE_ASXVOLT16  HW_NODE_SAU5081  HW_NODE_VM  HW_TYPE  Kafka_PM_agent.py  Kafka_agent.py  collect_disk_util_info.sh  collect_mem_info.sh  gpon_unit_test_onu_cfg  ipv6_status.sh  logsrv.sh  mgmt_protocol.sh  onu_cfg  psme.conf  psme.sh  psme_rsd.conf  rfsrvlog  rm_g_onu_cfg  (+1 more)
PSME/agent/network/acc_sw/acc_script/: acl.sh  acl_init.sh  ca_from_tlv.sh  collect_cpu_util_info.sh  collect_drv_info.sh  collect_mem_util_info.sh  create_network_config.sh  l2.sh  lldp.sh  lldpM.sh  mgmt_vlan.sh  port_init.sh  port_status.sh  psme.sh  rule.sh  s.sh  s_flow.sh  s_g.sh  static_mac_init.sh  tools.sh  trunk.sh  trunk_init.sh  vlan.sh
PSME/agent/network/acc_sw/arm_acc_bin/: acc_sw.c  install_rmm.sh  uninstall_rmm.sh
PSME/agent/network/acc_sw/bal_test/: gpon_unit_test_onu_cfg  rm_g_onu_cfg  xgspon_unit_test_onu_cfg
PSME/agent/network/acc_sw/mod_conf/: INF_8077i_Defalut.json  INF_8077i_Hisense_LTH7226.json  INF_8077i_Source_Photonics.json  SFF_8472_Hisens_LTE3680P.json
PSME/agent/network/acc_sw/x_86_acc_bin/: acc_sw  acc_sw.c
PSME/agent/network/acc_sw/x_86_lldp/: liblldpctl.so.4  lldpcli  lldpd
PSME/agent/network/acc_sw/x_86_uci/: uci
PSME/agent/network/include/utils/: lag.hpp
PSME/application/: CMakeLists.txt
PSME/application/include/: app.hpp
PSME/application/src/: CMakeLists.txt  app.cpp
PSME/application/src/rest/: CMakeLists.txt
PSME/application/src/rest/constants/: chassis.cpp  constants.cpp  ethernet.cpp  routes.cpp  system.cpp
PSME/application/src/rest/endpoints/: account.cpp  account_accounts_collection.cpp  account_role_collection.cpp  account_service.cpp  endpoint_base.cpp  endpoint_builder.cpp  event_service.cpp  event_subscription.cpp  event_subscriptions_collection.cpp  manager.cpp  manager_log_services.cpp  manager_log_services_collection.cpp  manager_log_services_entries.cpp  manager_log_services_entries_collection.cpp  manager_network_interface.cpp  manager_network_interface_collection.cpp  manager_serial_interface.cpp  manager_serial_interface_collection.cpp  message_registry_file.cpp  message_registry_file_collection.cpp  network_protocol.cpp  olt.cpp  redfish.cpp  role.cpp  root.cpp  session_collection.cpp  session_service.cpp  sessions.cpp  task.cpp  task_collection.cpp  task_service.cpp  test_event_subscription.cpp  update_service.cpp
PSME/application/src/rest/eventing/: event_service.cpp
PSME/application/src/rest/model/: watcher.cpp
PSME/cmake/: InstallIpmitool.cmake  InstallJsonRpcCpp.cmake  InstallMicrohttpd.cmake  InstallSafeString.cmake  InstallScriptsCommon.cmake
PSME/cmake/Platform/: Linux-gcc-arm.cmake
PSME/common/: CMakeLists.txt
PSME/common/acc_bal30_api_dist_helper/: CMakeLists.txt
PSME/common/acc_bal30_api_dist_helper/src/: acc_bal30_api_dist_helper.cpp  mk30.sh  unitest_acc_bal30_api_dist.cpp
PSME/common/acc_bal3_api_dist_helper/: CMakeLists.txt
PSME/common/acc_bal3_api_dist_helper/src/: acc_bal3_api_dist_helper.cpp  mk3.sh  unitest_acc_bal3_api_dist.cpp
PSME/common/acc_bal_api_dist_helper/: CMakeLists.txt
PSME/common/acc_bal_api_dist_helper/src/: acc_bal_api_dist_helper.cpp  asgvolt64.cpp  asxvolt16.cpp  mk.sh  mk3.sh  unitest_acc_bal_api_dist.cpp
PSME/common/acc_net_helper/: CMakeLists.txt
PSME/common/acc_net_helper/src/: acc_net_helper.cpp
PSME/common/acc_onlp_helper/: CMakeLists.txt
PSME/common/acc_onlp_helper/src/: acc_onlp_helper.cpp  as5916_54xk.cpp  as5916_54xks.cpp  asgvolt64.cpp  asxvolt16.cpp  switch_sys_mode.cpp
PSME/common/acc_sys_helper/: CMakeLists.txt
PSME/common/acc_sys_helper/src/: acc_sys_helper.cpp
PSME/common/agent-framework/: Version.cmake
PSME/common/fru_eeprom/: CMakeLists.txt
PSME/common/include/generic/: worker_thread.hpp
PSME/common/netlink/src/: CMakeLists.txt
PSME/common/smbios/tests/: CMakeLists.txt
(+1053 files in other folders)
